<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nolineActvity"
    android:orientation="vertical">
    <EditText
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:id="@+id/test_edit"/>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="276dp"
            android:layout_height="74dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/finallogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingTop="8dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/layoutshape">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/busname"
                android:layout_weight="1"
                android:textSize="14sp"
                android:id="@+id/route"
                android:layout_marginTop="-3dp"
                />

            <EditText
                android:id="@+id/nolineEdittext"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:imeOptions="actionSearch"
                android:inputType="number"
                android:hint="@string/hint"
                android:textSize="15sp"
                android:layout_marginTop="-3dp"/>
            <!--<ImageView-->
                <!--android:layout_width="40dp"-->
                <!--android:layout_height="40dp"-->
                <!--android:src="@drawable/select"-->
                <!--android:layout_weight="1"-->
                <!--android:id="@+id/sech"/>-->
            <Button
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/buttonshape3"
                android:text="@string/select"
                android:textColor="#ffffff"
                android:textSize="16sp"

                android:layout_marginLeft="10dp"
                android:id="@+id/select1"
                android:layout_marginTop="-3dp"
                android:layout_marginBottom="5dp"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/layoutshape2"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="10dp">

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/noline_list"></ListView>
            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1px"-->
                <!--android:background="#ABAEAF"-->
                <!--android:layout_marginTop="-30dp"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--&gt;</View>-->
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>