<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".select_Activity"
    android:orientation="vertical">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="276dp"
            android:layout_height="74dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/finallogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:layout_weight="1"
        >
       <!--<LinearLayout-->
           <!--android:layout_width="match_parent"-->
           <!--android:layout_height="wrap_content"-->
           <!--android:background="@drawable/layoutshape"-->
           <!--android:layout_margin="7dp">-->
           <!--<TextView-->
               <!--android:layout_width="match_parent"-->
               <!--android:layout_height="match_parent"-->
               <!--android:text="이용한 버스 카드"-->
               <!--android:textSize="24sp"-->
               <!--android:gravity="center"-->
               <!--android:layout_centerVertical="true"-->
               <!--android:id="@+id/selecttext"/>-->
       <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="15dp">-->
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/cash"-->
                <!--android:id="@+id/cash"/>-->
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/money"-->
                <!--android:layout_marginLeft="-7dp"-->
                <!--android:id="@+id/money"/>-->
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/card"-->
                <!--android:id="@+id/card"/>-->
        <!--</LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingTop="8dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/layoutshape">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/busname"
                android:layout_weight="1"
                android:textSize="16dp"
                android:id="@+id/route"
                android:layout_marginTop="-3dp"
                />

            <!--<EditText-->
                <!--android:id="@+id/selectEdit"-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_marginTop="13dp"-->
                <!--android:hint="버스 번호을 입력해주세요" />-->
            <EditText
                android:id="@+id/selectEdit"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:imeOptions="actionSearch"
                android:inputType="number"
                android:hint="@string/hint"
                android:textSize="15sp"
                android:layout_marginTop="-3dp"/>
            <Button
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/buttonshape3"
                android:text="@string/select"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:id="@+id/select1"
                android:layout_marginTop="-3dp"
                android:layout_marginBottom="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select1"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/layoutshape2">

            <ListView
                android:id="@+id/listview_select"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:divider="#ffffff"
                android:dividerHeight="0px"></ListView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>